--- a/css-and-images/styles.css
+++ b/css-and-images/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #6FCF97;
+    background: #F58EA6;
 }
 
 #my-title{
@@ -7,22 +7,46 @@ body {
     flex-direction: column;
     align-items: center;
     font-size: 40px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Fredoka One', cursive;
+    color: #254441;
+}
+
+#calculator-container{
+    display: flex;
+    flex-direction: column;
+    border: 10px solid #8CFF98;
+    height: 575px;
+    padding: 2%;
+    border-radius: 60px;
+    gap: 50px;
+}
+
+#results{
+    display: flex;
+    flex-direction: row-reverse;
+    border: 15px solid #8CFF98;
+    border-radius: 30px;
+    height: 50px;
+    padding: 2%;
+    font-family: 'Fredoka One', cursive;
+    color: #254441;
 }
 
 #calculator{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 20% 20% 20% 20% 20%;
-    width: 500px;
-    height: 500px;
+    margin-right: 20%;
+    width: 400px;
+    height: 400px;
+    gap: 2%;
+    margin-right: 20px;
 }
 
 #equal{
     grid-column-start: 4;
     grid-row-start: 4;
     grid-row-end: 6;
-    
 }
 
 #backspace{
@@ -32,4 +56,19 @@ body {
 
 button{
     font-size: 50px;
+    font-family: 'Fredoka One', cursive;
+    border: 5px solid #8CFF98;
+    border-radius: 20px;
+    color: #254441;
+    background-color: #F58EA6;
+}
+
+button:hover{
+    box-shadow: 5px 5px;
+    background-color: #f3849e
+}
+
+button:active{
+    box-shadow: 3px 3px;
+    background-color: #f3849e
 }
